Bug 408931 - Pressing "alt+G" followed by "Enter / Return" redeals the current game
Summary: Pressing "alt+G" followed by "Enter / Return" redeals the current game
Status: RESOLVED FIXED
Alias: None
Product: kpat
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Stephan Kulow
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-19 22:55 UTC by Shlomi Fish
Modified: 2020-08-31 17:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Shlomi Fish 2019-06-19 22:55:54 UTC
SUMMARY

Pressing "alt+G" followed by "Enter / Return" redeals the current game without giving me a chance to select a different variant.

STEPS TO REPRODUCE
1. Start a freecell game.
2. Press Alt+G.
3. Press Enter / Return.

OBSERVED RESULT

New deal.

EXPECTED RESULT

Game selection scene.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: fedora 30 and mageia 7.
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Shlomi Fish 2019-06-19 23:12:52 UTC
Note that all of:

1. Alt+g ; g
2. Ctrl+shift+n
3. Clicking the toolbar icon.

work fine.
Comment 2 Albert Astals Cid 2019-06-19 23:24:57 UTC
Alt+G is the "underlined name for Game" so it's language dependant :)

For me it's Alt+J (for Joc)
Comment 3 Bug Janitor Service 2020-08-31 13:11:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/games/kpat/-/merge_requests/6
Comment 4 Willyanto 2020-08-31 17:52:00 UTC
Git commit 766f52a3a4ae174543d5eeb091c7a3415e974bd4 by Willyanto Willyanto.
Committed on 31/08/2020 at 13:01.
Pushed by aacid into branch 'master'.

Fix pressing alt+G and Enter/Return redeals current game

M  +8    -3    gameselectionscene.cpp
M  +1    -0    gameselectionscene.h

https://invent.kde.org/games/kpat/commit/766f52a3a4ae174543d5eeb091c7a3415e974bd4