Fix pressing alt+G and Enter/Return redeals current game

BUG: 408931